# modelsign

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml
src/modelsign/: __init__.py  cli.py  sig.py
src/modelsign/crypto/: __init__.py  keys.py  sign.py  verify.py
src/modelsign/formats/: __init__.py  directory.py  single.py
src/modelsign/identity/: __init__.py  canonical.py  card.py
src/modelsign/middleware/: __init__.py  response.py
tests/: conftest.py  test_canonical.py  test_card.py  test_cli.py  test_formats.py  test_integration.py  test_keys.py  test_middleware.py  test_sig.py  test_sign_verify.py
