[build-system]
requires = ["setuptools>=68.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "modelsign"
version = "1.0.2"
description = "Sign AI models with identity. Verify anywhere."
authors = [{name = "QJ", email = "qj@constantone.ai"}]
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Security :: Cryptography",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "cryptography>=41.0",
    "click>=8.0",
    "rfc8785>=0.1.2",
]

[project.optional-dependencies]
middleware = ["fastapi>=0.100"]
dev = ["pytest>=7.0", "pytest-cov", "mypy"]

[project.scripts]
modelsign = "modelsign.cli:main"

[project.urls]
Homepage = "https://github.com/ConstantQJ/modelsign"
Issues = "https://github.com/ConstantQJ/modelsign/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
