[build-system]
requires = ["setuptools>=68.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "modelsign"
version = "1.0.3"
description = "Sign AI models with identity. Verify anywhere. Part of the AURE Provenance stack by Constant Systems."
authors = [{name = "James Kerr", email = "qj@constantqj.com"}]
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Security :: Cryptography",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "cryptography>=41.0",
    "click>=8.0",
    "rfc8785>=0.1.2",
]

[project.optional-dependencies]
middleware = ["fastapi>=0.100"]
dev = ["pytest>=7.0", "pytest-cov", "mypy"]

[project.scripts]
modelsign = "modelsign.cli:main"

[project.urls]
Homepage = "https://constantsystems.ai/provenance"
Repository = "https://github.com/QuantQJ/modelsign"
Issues = "https://github.com/QuantQJ/modelsign/issues"
Documentation = "https://constantsystems.ai/provenance"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
